# SQRL-TournamentRunner

./: .gitmodules  CMakeLists.txt  README.md
include/: bot.h  event_tracker.h  match.h  python_bot.h  python_interface.h  python_script_converter.h  render.h  shared_memory.h
src/: bot.cpp  main.cpp  match.cpp  python_bot.cpp  python_interface.cpp  python_script_converter.cpp  render.cpp  shared_memory.cpp  utils.cpp
